--- a/styles.css
+++ b/styles.css
@@ -6,85 +6,76 @@
 }
 body {
   display: flex;
-  min-height: 100vh;
+  /* height: 100vh; */
   justify-content: center;
   align-items: center;
-  background-color: #1c2841;
+  margin: 10px;
+  background: #1c2841;
 }
 .container {
-  width: 680px;
+  display: flex;
+  flex-direction: column;
+  background: #f4f4f4;
+  width: 480px;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 1);
+  box-shadow: 0 0 10px rgba(0, 250, 250, 0.5);
 }
 .entryarea {
   position: relative;
-  height: 80px;
-  line-height: 80px;
+  height: 40px;
+  line-height: 40px;
 }
 
 input{
   position: absolute;
   width: 100%;
   outline: none;
-  font-size: 2.2em;
+  font-size: 1.2rem;
   padding: 0 30px;
-  line-height: 80px;
+  line-height: 40px;
   border-radius: 10px;
-  border: 2px solid #f0ffff;
+  border: 2px solid #1c2841;
   background: transparent;
   transition: 0.1s ease;
   z-index: 1;
-  color: #f0f0f0;
+  color: #1c2841;
 }
 .labelline {
   position: absolute;
-  font-size: 1.6em;
+  font-size: 1.2rem;
   color: #1c2841;
   padding: 0 25px;
   margin: 0 20px;
-  background: #1c2841;
+  background: #f4f4f4;
   transition: 0.2s ease;
 }
 input:focus,
 input:valid {
-  color: #f0f0f0;
-  border: 4px solid #f0f0f0;
+  color: #1c2841;
+  border: 2px solid #1c2841;
 }
 input:focus + .labelline,
 input:valid + .labelline{
-  color: #f0f0f0;
+  color: #1c2841;
   height: 30px;
   line-height: 30px;
   padding: 0 12px;
   transform: translate(-15px, -16px) scale(0.88);
   z-index: 1;
 }
-li img {
-  cursor: pointer;
-  border: 1px solid gray;
-  border-radius: 5px;
-  opacity: 0.6;
-}
-li img:hover{
-  border-color: red;
-  transition: 0.3s;
-  opacity: 1;
-}
 button {
-  cursor: pointer;
   color: #f0ffff;
+  background: #1c2841;
+  cursor: pointer;
+  font-weight: bold;
   border-radius: 5px;
   transition: 0.3s;
-  background: transparent;
   width: 100%;
   padding: 5px;
-  font-weight: bold;
+  margin-top: 10px;
 }
-fieldset {
-  border-radius: 10px;
-  /* margin-top: 10px; */
-}
+
 ul {
   min-height: 150px;
   list-style-type: none;
@@ -95,10 +86,22 @@ li {
   align-items: center;
   justify-content: space-between;
   background-color: transparent;
-  /* border: 1px solid #f0ffff; */
+  border: 1px solid #1c2841;
   border-radius: 5px;
-  color: #f0ffff;
-  margin: 5px auto;
+  color: #1c2841;
+  margin-top: 10px;
+  margin-bottom: 5px;
   padding: 5px;
   font-weight: bold;
+}
+li img {
+  cursor: pointer;
+  border: 1px solid gray;
+  border-radius: 5px;
+  opacity: 0.9;
+}
+li img:hover{
+  border-color: red;
+  transition: 0.3s;
+  opacity: 1;
 }
