--- a/styles.css
+++ b/styles.css
@@ -1,107 +1,200 @@
-* {
-  margin: 0;
-  padding: 0;
-  font-family: 'poppins', sans-serif;
-  box-sizing: border-box;
+:root {
+  --cor-primaria: #fff;
+  --texto-principal: #030303;
+  --cor-botao: #5664f5;
+  --cor-texto-botao: #fff;
+  --cor-botao-secundario: #030303;
+  --cor-placeholder: #94a3b8;
+  --borda-input: #ececec;
+  --borda-container: #e5e7eb;
 }
-body {
-  display: flex;
-  /* height: 100vh; */
-  justify-content: center;
-  align-items: center;
-  margin: 10px;
-  background: #1c2841;
-}
-.container {
-  display: flex;
-  flex-direction: column;
-  background: #f4f4f4;
-  width: 480px;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 250, 250, 0.5);
-}
-.entryarea {
-  position: relative;
-  height: 40px;
-  line-height: 40px;
+@font-face {
+  font-family: "Lexend Deca";
+  src: url("fonts/LexendDeca-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
 
-input{
-  position: absolute;
+* {
+  font-family: "Lexend Deca", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  height: 100vh;
+}
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  background-color: var(--cor-primaria);
+  padding: 10px;
+  box-shadow: 0 4px 10px 2px rgba(3, 3, 3, 0.1);
+}
+.user-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+  align-items: center;
+}
+
+.container {
+  margin: 30px;
+  padding: 10px;
+  border-radius: 8px;
+  background: #fff;
+  border: 1px solid #e5e7eb;
+  box-shadow: 0 4px 10px 2px rgba(0, 0, 0, 0.25);
+}
+
+p,
+h2,
+h3 {
+  color: var(--texto-principal);
+}
+
+::placeholder {
+  color: var(--cor-placeholder);
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.coluna1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30%;
+}
+
+.coluna1 input {
   width: 100%;
-  outline: none;
-  font-size: 1.2rem;
-  padding: 0 30px;
-  line-height: 40px;
-  border-radius: 10px;
-  border: 2px solid #1c2841;
-  background: transparent;
-  transition: 0.1s ease;
-  z-index: 1;
-  color: #1c2841;
 }
-.labelline {
-  position: absolute;
-  font-size: 1.2rem;
-  color: #1c2841;
-  padding: 0 25px;
-  margin: 0 20px;
-  background: #f4f4f4;
-  transition: 0.2s ease;
+
+.coluna2 {
+  /* min-height: 300px; */
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-left: 20px;
+  margin-right: 20px;
 }
-input:focus,
-input:valid {
-  color: #1c2841;
-  border: 2px solid #1c2841;
+.coluna2 input {
+  align-items: flex-end;
 }
-input:focus + .labelline,
-input:valid + .labelline{
-  color: #1c2841;
-  height: 30px;
-  line-height: 30px;
-  padding: 0 12px;
-  transform: translate(-15px, -16px) scale(0.88);
-  z-index: 1;
+
+.coluna3 {
+  width: 30%;
 }
-button {
-  color: #f0ffff;
-  background: #1c2841;
-  cursor: pointer;
-  font-weight: bold;
-  border-radius: 5px;
-  transition: 0.3s;
-  width: 100%;
+
+.resumo {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.obs textarea {
   padding: 5px;
-  margin-top: 10px;
+  width: 100%;
+  line-height: 1.5;
+  border-radius: 5px;
+  color: var(--texto-principal);
+  border: 1px solid var(--borda-input);
+}
+
+.input-with-button {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.input-with-text {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  gap: 10px;
+}
+
+input {
+  border-radius: 7px;
+  padding: 5px;
+  color: var(--texto-principal);
+  border: 1px solid var(--borda-input);
+}
+
+button {
+  cursor: pointer;
+  border: none;
+  padding: 5px;
+  margin: 1px;
+  border-radius: 5px;
+  background: var(--cor-botao);
+  color: var(--cor-texto-botao);
+}
+
+.btn-save-data {
+  width: 50%;
+}
+
+.btn-delete-data {
+  background-color: var(--cor-botao-secundario);
+  width: 50%;
+}
+
+.buttons-save-delete {
+  display: flex;
+  justify-content: space-between;
+  height: 30px;
 }
 
 ul {
-  min-height: 150px;
-  list-style-type: none;
-  padding: 0;
-}
-li {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: transparent;
-  border: 1px solid #1c2841;
-  border-radius: 5px;
-  color: #1c2841;
   margin-top: 10px;
-  margin-bottom: 5px;
-  padding: 5px;
+  padding: 0;
+  list-style: none;
+}
+
+ul li {
+  color: #646464;
+  background: rgba(0, 0, 0, 0.1);
+  padding-left: 5px;
+  margin-bottom: 2px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 5px;
   font-weight: bold;
 }
-li img {
+
+.remove-icon {
+  border-radius: 3px;
+  width: 15px;
+  height: 15px;
   cursor: pointer;
-  border: 1px solid gray;
-  border-radius: 5px;
-  opacity: 0.9;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  margin-right: 3px;
 }
-li img:hover{
-  border-color: red;
-  transition: 0.3s;
-  opacity: 1;
+
+@media (max-width: 768px) {
+  .flex-container {
+    flex-direction: column;
+  }
+
+  .coluna1,
+  .coluna2,
+  .coluna3 {
+    width: 100%;
+  }
 }
