--- a/styles.css
+++ b/styles.css
@@ -1,200 +1,6 @@
-:root {
-  --cor-primaria: #fff;
-  --texto-principal: #030303;
-  --cor-botao: #5664f5;
-  --cor-texto-botao: #fff;
-  --cor-botao-secundario: #030303;
-  --cor-placeholder: #94a3b8;
-  --borda-input: #ececec;
-  --borda-container: #e5e7eb;
-}
-@font-face {
-  font-family: "Lexend Deca";
-  src: url("fonts/LexendDeca-Regular.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
-
 * {
-  font-family: "Lexend Deca", sans-serif;
+  font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
-body {
-  background-color: #fff;
-  display: flex;
-  flex-direction: column;
-  /* justify-content: center; */
-  height: 100vh;
-}
-.header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-
-  background-color: var(--cor-primaria);
-  padding: 10px;
-  box-shadow: 0 4px 10px 2px rgba(3, 3, 3, 0.1);
-}
-.user-info {
-  display: flex;
-  flex-direction: row;
-  justify-content: right;
-  align-items: center;
-}
-
-.container {
-  margin: 30px;
-  padding: 10px;
-  border-radius: 8px;
-  background: #fff;
-  border: 1px solid #e5e7eb;
-  box-shadow: 0 4px 10px 2px rgba(0, 0, 0, 0.25);
-}
-
-p,
-h2,
-h3 {
-  color: var(--texto-principal);
-}
-
-::placeholder {
-  color: var(--cor-placeholder);
-}
-
-.flex-container {
-  display: flex;
-  flex-direction: row;
-}
-
-.coluna1 {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 30%;
-}
-
-.coluna1 input {
-  width: 100%;
-}
-
-.coluna2 {
-  /* min-height: 300px; */
-  width: 40%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  margin-left: 20px;
-  margin-right: 20px;
-}
-.coluna2 input {
-  align-items: flex-end;
-}
-
-.coluna3 {
-  width: 30%;
-}
-
-.resumo {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-}
-
-.obs textarea {
-  padding: 5px;
-  width: 100%;
-  line-height: 1.5;
-  border-radius: 5px;
-  color: var(--texto-principal);
-  border: 1px solid var(--borda-input);
-}
-
-.input-with-button {
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-}
-
-.input-with-text {
-  display: flex;
-  flex-direction: row;
-  align-items: baseline;
-  gap: 10px;
-}
-
-input {
-  border-radius: 7px;
-  padding: 5px;
-  color: var(--texto-principal);
-  border: 1px solid var(--borda-input);
-}
-
-button {
-  cursor: pointer;
-  border: none;
-  padding: 5px;
-  margin: 1px;
-  border-radius: 5px;
-  background: var(--cor-botao);
-  color: var(--cor-texto-botao);
-}
-
-.btn-save-data {
-  width: 50%;
-}
-
-.btn-delete-data {
-  background-color: var(--cor-botao-secundario);
-  width: 50%;
-}
-
-.buttons-save-delete {
-  display: flex;
-  justify-content: space-between;
-  height: 30px;
-}
-
-ul {
-  margin-top: 10px;
-  padding: 0;
-  list-style: none;
-}
-
-ul li {
-  color: #646464;
-  background: rgba(0, 0, 0, 0.1);
-  padding-left: 5px;
-  margin-bottom: 2px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-radius: 5px;
-  font-weight: bold;
-}
-
-.remove-icon {
-  border-radius: 3px;
-  width: 15px;
-  height: 15px;
-  cursor: pointer;
-  margin-top: 2px;
-  margin-bottom: 2px;
-  margin-right: 3px;
-}
-
-/* @media (max-width: 768px) {
-  .flex-container {
-    flex-direction: column;
-  }
-
-  .coluna1,
-  .coluna2,
-  .coluna3 {
-    width: 100%;
-  }
-} */
